--- a/app/src/main/res/layout/subpage_light.xml
+++ b/app/src/main/res/layout/subpage_light.xml
@@ -34,8 +34,6 @@
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/button_back"
-
-
         >
 
     </Button>
@@ -47,13 +45,233 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginStart="300dp"
-        android:layout_marginTop="10dp"
-
-        >
-
+        android:layout_marginTop="10dp">
     </RadioButton>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:id="@+id/fan_unlock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:background="@drawable/unlock">
+
+            </ImageView>
+
+            <TextView
+                android:id="@+id/fan_unlock_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="界面已解锁"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:typeface="serif">
+
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:background="@drawable/fan">
+
+            </ImageView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="设备状况:"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:typeface="serif">
+
+            </TextView>
+
+            <Button
+                android:id="@+id/light_state_button"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+                android:background="@drawable/shape_circle_gray">
+
+            </Button>
+
+            <TextView
+                android:id="@+id/light_state_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="获取中"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:typeface="serif">
+
+            </TextView>
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_marginLeft="30dp"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="100dp"
+                    android:src="@drawable/light_control_on"
+                    android:layout_height="80dp">
+
+                </ImageView>
+                <TextView
+                    android:layout_width="100dp"
+                    android:text="室内光强"
+                    android:textSize="22dp"
+                    android:textColor="@color/black"
+                    android:layout_height="wrap_content">
+                </TextView>
+            </LinearLayout>
+            <TextView
+                android:layout_width="100dp"
+                android:id="@+id/light_intensity_text"
+                android:layout_marginLeft="50dp"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content">
+
+            </TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="自动声控"
+                    android:textColor="@color/black"
+                    android:textSize="22dp">
+
+                </TextView>
+
+                <Switch
+                    android:id="@+id/switch_voice"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="200dp">
+
+                </Switch>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp">
+
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="自动光控"
+                    android:textColor="@color/black"
+                    android:textSize="22dp">
+
+                </TextView>
+
+                <Switch
+                    android:id="@+id/switch_light"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="200dp">
+
+                </Switch>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="350dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="100dp"
+                        android:text="开关状态"
+                        android:textColor="@color/black"
+                        android:textSize="22dp"
+                        android:layout_height="wrap_content">
+                    </TextView>
+                    <TextView
+                        android:layout_width="50dp"
+                        android:id="@+id/led_flag_text"
+                        android:layout_marginLeft="60dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/black"
+                        android:textSize="18dp"
+                        android:layout_height="22dp">
+                    </TextView>
+                </LinearLayout>
+                <ImageView
+                    android:id="@+id/image_led"
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="50dp"
+                    android:src="@drawable/switch_on">
+
+                </ImageView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="手动开关"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold">
+
+                </TextView>
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 
